--- a/calendario.html
+++ b/calendario.html
@@ -48,7 +48,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
-            <a class="navbar-brand" href="#" style="max-width: 40%">
+            <a class="navbar-brand" href="./index.html" style="max-width: 40%">
                 <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
@@ -59,10 +59,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
                     <li nav-item>
-                        <a href="#inicio" class="nav-link">Inicio</a>
+                        <a href="./index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="destinosDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="./historia.html" id="destinosDropdown" role="button"
                             data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             Club
                         </a>
@@ -73,16 +73,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#calendario" class="nav-link">Calendario</a>
+                        <a href="./calendario.html" class="nav-link">Calendario</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#estadisticas" class="nav-link ">Estadísticas</a>
+                        <a href="./estadisticas_club.html" class="nav-link ">Estadísticas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#patrocinadores" class="nav-link ">Patrocinadores</a>
+                        <a href="./patrocinadores.html" class="nav-link ">Patrocinadores</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacto" class="nav-link ">Contacto</a>
+                        <a href="./contacto.html" class="nav-link ">Contacto</a>
                     </li>
 
                 </ul>
@@ -109,71 +109,71 @@
 
 
         <!-- Footer-->
-        <footer class="bg-light py-5 mt-5">
+        <!-- Footer-->
+    <footer class="bg-light py-5 mt-5">
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-6 col-md-3 mb-3">
-                        <h5>Atletismo Santiago</h5>
-                        <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Calendario</a></li>
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Estadisticas</a></li>
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Patrocinadores</a></li>
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Contacto</a></li>
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-md-3 mb-3">
+                    <h5>Atletismo Santiago</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-muted">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
+                        <li class="nav-item mb-2"><a href="./calendario.html" class="nav-link p-0 text-muted">Calendario</a></li>
+                        <li class="nav-item mb-2"><a href="./estadisticas_club.html" class="nav-link p-0 text-muted">Estadisticas</a></li>
+                        <li class="nav-item mb-2"><a href="./patrocinadores.html" class="nav-link p-0 text-muted">Patrocinadores</a></li>
+                        <li class="nav-item mb-2"><a href="./contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
 
-                        </ul>
-                    </div>
-                    <div class="col-6 col-md-3 mb-3">
-                        <h5>Club</h5>
-                        <ul class="nav flex-column">
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Historia</a></li>
-
-                            <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Inscripciones</a></li>
-
-                        </ul>
-                    </div>
-                    <div class="col-md-5 offset-md-1 mb-3">
-                        <form>
-                            <h5>Contacto</h5>
-                            <p>Si tienes alguna pregunta no dudes en ponerte en contacto con nosotros</p>
-                            <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-                                <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
-                                <input id="email" type="text" class="form-control" placeholder="Correo electrónico">
-                                <label for="subject" class="visually-hidden">Asunto</label>
-                                <input id="subject" type="text" class="form-control" placeholder="Asunto">
-
-                            </div>
-                            <div class="d-flex flex-column flex-sm-row w-100 gap-2 mt-2">
-                                <label for="message" class="visually-hidden">Mensaje</label>
-                                <textarea id="message" type="text" class="form-control"
-                                    placeholder="Mensaje"></textarea>
-                            </div>
-                            <div
-                                class="d-flex flex-column flex-sm-row w-100 mt-2 text-center justify-content-center align-items-center">
-                                <button class="btn btn-primary" type="button" onclick="sendEmail()">Enviar</button>
-                            </div>
-
-
-                        </form>
-
-                    </div>
-                </div>
-                <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-                    <p>&copy; 2023 Reservados todos los derechos. <a
-                            href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#516171"
-                            target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
-                    <ul class="list-unstyled d-flex">
-                        <li class="ms-4"><a class="bi bi-twitter link-dark" href="#"></a></li>
-                        <li class="ms-4"><a class="bi bi-instagram link-dark" href="#"></a></li>
-                        <li class="ms-4"><a class="bi bi-facebook link-dark" href="#"></svg></a></li>
                     </ul>
                 </div>
+                <div class="col-6 col-md-3 mb-3">
+                    <h5>Club</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a></li>
+
+                        <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia" class="nav-link p-0 text-muted">Inscripciones</a></li>
+
+                    </ul>
+                </div>
+                <div class="col-md-5 offset-md-1 mb-3">
+                    <form>
+                        <h5>Contacto</h5>
+                        <p>Si tienes alguna pregunta no dudes en ponerte en contacto con nosotros</p>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Correo electrónico</label>
+                            <input id="email" type="text" class="form-control" placeholder="Correo electrónico">
+                            <label for="subject" class="visually-hidden">Asunto</label>
+                            <input id="subject" type="text" class="form-control" placeholder="Asunto">
+
+                        </div>
+                        <div class="d-flex flex-column flex-sm-row w-100 gap-2 mt-2">
+                            <label for="message" class="visually-hidden">Mensaje</label>
+                            <textarea id="message" type="text" class="form-control" placeholder="Mensaje"></textarea>
+                        </div>
+                        <div
+                            class="d-flex flex-column flex-sm-row w-100 mt-2 text-center justify-content-center align-items-center">
+                            <button class="btn btn-primary" type="button" onclick="sendEmail()">Enviar</button>
+                        </div>
 
 
+                    </form>
+
+                </div>
             </div>
-        </footer>
+            <div class="d-flex flex-column flex-sm-row justify-content-between border-top">
+                <p>&copy; 2023 Reservados todos los derechos. <a
+                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
+                        target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-4"><a class="bi bi-twitter link-dark" href="#"></a></li>
+                    <li class="ms-4"><a class="bi bi-instagram link-dark" href="#"></a></li>
+                    <li class="ms-4"><a class="bi bi-facebook link-dark" href="#"></svg></a></li>
+                </ul>
+            </div>
+
+
+        </div>
+    </footer>
 
 
 
@@ -185,6 +185,134 @@
         <script src="js/app.js"></script>
         <script src="js/tooltip.min.js"></script>
 
+        <script>
+            var tooltip_en_pantalla = false;
+
+            document.addEventListener('DOMContentLoaded', function () {
+                var calendarEl = document.getElementById('calendar');
+                var eventos = null;
+
+                // Fetch events from the JSON file
+                fetch('https://toimil.github.io/AtletismoSantiago/data/calendario_fga.json')
+                    .then(response => response.json())
+                    .then(data => {
+                        eventos = data;
+
+                        // Create the FullCalendar instance after fetching the data
+                        var calendar = new FullCalendar.Calendar(calendarEl, {
+                            height: 'auto',
+                            defaultView: 'dayGridMonth',
+                            locale: 'es',
+                            eventLimit: true,
+                            dayMaxEvents: 3,
+                            views: {
+                                week: {
+                                    dayMaxEvents: 15
+                                }
+                            },
+
+                            buttonText: {
+                                today: 'Hoy',
+                                month: 'Mes',
+                                week: 'Semana',
+                                day: 'Día',
+                                list: 'Lista'
+                            },
+                            headerToolbar: {
+                                left: 'prev,next today',
+                                center: 'title',
+                                right: 'dayGridMonth,timeGridWeek,listMonth'
+                            },
+
+                            events: eventos,
+                            eventClick: function (info) {
+                                info.jsEvent.preventDefault();
+
+                                // Cerrar tooltip existente si está en pantalla
+                                if (tooltip_en_pantalla) {
+                                    $('.tooltip.bs-tooltip-auto.fade.show').remove();
+                                    tooltip_en_pantalla = false;
+                                }
+
+                                $(info.el).tooltip({
+                                    title: function () {
+                                        var tooltipContent = '<strong>' + info.event.title + '</strong>';
+
+                                        if (info.event.extendedProps.place) {
+                                            tooltipContent += '<br>Lugar: ' + info.event.extendedProps.place;
+                                        }
+
+                                        if (info.event.url) {
+                                            tooltipContent += '<br><a href="' + info.event.url + '" target="_blank">Más información</a>';
+                                        }
+
+                                        return tooltipContent;
+                                    },
+                                    placement: 'top',
+                                    trigger: 'manual',  // Desactivar el cierre automático
+                                    container: 'body',
+                                    html: true,
+                                    template: '<div id="tooltip_abierto" style="display: block !important" class="tooltip" role="tooltip"><div class="tooltip-arrow"></div><div class="tooltip-inner"></div></div>'
+                                });
+
+                                $(info.el).tooltip('show');
+                                tooltip_en_pantalla = true;
+                            },
+
+                            eventMouseEnter: function (info) {
+                                $(info.el).tooltip({
+                                    title: function () {
+                                        var tooltipContent = '<strong>' + info.event.title + '</strong>';
+
+                                        if (info.event.extendedProps.place) {
+                                            tooltipContent += '<br>Lugar: ' + info.event.extendedProps.place;
+                                        }
+
+                                        if (info.event.url) {
+                                            tooltipContent += '<br><a href="' + info.event.url + '" target="_blank">Más información</a>';
+                                        }
+
+                                        return tooltipContent;
+                                    },
+                                    placement: 'top',
+                                    trigger: 'manual',  // Desactivar el cierre automático
+                                    container: 'body',
+                                    html: true,
+                                    template: '<div class="tooltip" role="tooltip"><div class="tooltip-arrow"></div><div class="tooltip-inner"></div></div>'
+
+                                });
+
+                                $(info.el).tooltip('show');
+
+
+                                // Evento para ocultar el tooltip cuando el mouse sale del evento
+                                $(info.el).on('mouseleave', function () {
+                                    setTimeout(function () {
+                                        if (!$('.tooltip:hover').length) {
+                                            $(info.el).tooltip('hide');
+                                        }
+                                    }, 100);
+                                });
+
+                                // Evento para mantener el tooltip visible cuando el mouse está sobre él
+                                $('.tooltip').on('mouseleave', function () {
+                                    $(info.el).tooltip('hide');
+                                });
+                            },
+                        });
+
+                        // Render the calendar
+                        calendar.render();
+
+
+
+                    })
+                    .catch(error => {
+                        console.error('Error fetching events:', error);
+                    });
+            });
+
+        </script>
 
 </body>
 
