--- a/historia.html
+++ b/historia.html
@@ -46,7 +46,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
-            <a class="navbar-brand" href="#" style="max-width: 40%">
+            <a class="navbar-brand" href="./index.html" style="max-width: 40%">
                 <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
@@ -57,10 +57,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
                     <li nav-item>
-                        <a href="#inicio" class="nav-link">Inicio</a>
+                        <a href="./index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="destinosDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="./historia.html" id="destinosDropdown" role="button"
                             data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             Club
                         </a>
@@ -70,16 +70,16 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="#calendario" class="nav-link">Calendario</a>
+                        <a href="./calendario.html" class="nav-link">Calendario</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#estadisticas" class="nav-link ">Estadísticas</a>
+                        <a href="./estadisticas_club.html" class="nav-link ">Estadísticas</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#patrocinadores" class="nav-link ">Patrocinadores</a>
+                        <a href="./patrocinadores.html" class="nav-link ">Patrocinadores</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contacto" class="nav-link ">Contacto</a>
+                        <a href="./contacto.html" class="nav-link ">Contacto</a>
                     </li>
 
                 </ul>
@@ -131,21 +131,21 @@
                 <div class="col-6 col-md-3 mb-3">
                     <h5>Atletismo Santiago</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-muted">Inicio</a></li>
                         <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Calendario</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Estadisticas</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Patrocinadores</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Contacto</a></li>
+                        <li class="nav-item mb-2"><a href="./calendario.html" class="nav-link p-0 text-muted">Calendario</a></li>
+                        <li class="nav-item mb-2"><a href="./estadisticas_club.html" class="nav-link p-0 text-muted">Estadisticas</a></li>
+                        <li class="nav-item mb-2"><a href="./patrocinadores.html" class="nav-link p-0 text-muted">Patrocinadores</a></li>
+                        <li class="nav-item mb-2"><a href="./contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
 
                     </ul>
                 </div>
                 <div class="col-6 col-md-3 mb-3">
                     <h5>Club</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Historia</a></li>
+                        <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a></li>
 
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Inscripciones</a></li>
+                        <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia" class="nav-link p-0 text-muted">Inscripciones</a></li>
 
                     </ul>
                 </div>
@@ -174,9 +174,9 @@
 
                 </div>
             </div>
-            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <div class="d-flex flex-column flex-sm-row justify-content-between border-top">
                 <p>&copy; 2023 Reservados todos los derechos. <a
-                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#516171"
+                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
                         target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-4"><a class="bi bi-twitter link-dark" href="#"></a></li>
