--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top" id="barraNavegacion">
         <div class="container px-4">
-            <a class="navbar-brand" href="#" style="max-width: 40%">
+            <a class="navbar-brand" href="./index.html" style="max-width: 40%">
                 <img src="./img/logo.png" alt="Club Atletismo Santiago Logo" style="max-width: 50%; height: auto;">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
@@ -57,10 +57,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0 ">
                     <li nav-item>
-                        <a href="#inicio" class="nav-link">Inicio</a>
+                        <a href="./index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="destinosDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="./historia.html" id="destinosDropdown" role="button"
                             data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
                             Club
                         </a>
@@ -100,8 +100,6 @@
                             <h6 class="text-uppercase text-white">CLUB ATLETISMO SANTIAGO</h6>
                             <h1 class="display-2 my-3 text-white text-uppercase">Despierta al atleta <br>
                                 que llevas dentro</h1>
-                            <a href="#" class="btn btn-brand">Get Started</a>
-                            <a href="#" class="btn btn-outline-light ms-md-2">Our Work</a>
                         </div>
                     </div>
                 </div>
@@ -115,8 +113,6 @@
                             <h6 class="text-uppercase text-white">CLUB ATLETISMO SANTIAGO</h6>
                             <h1 class="display-2 my-3 text-white text-uppercase">Siente la pasión<br>
                                 del atletismo</h1>
-                            <a href="#" class="btn btn-brand">Get Started</a>
-                            <a href="#" class="btn btn-outline-light ms-md-2">Our Work</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +123,7 @@
 
 
     <!-- Process Start -->
-    <div class="container-xxl py-1">
+    <div class="container-xxl py-1 ">
         <div class="container py-5 px-lg-5">
             <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s">
                 <h5 class="text-primary-gradient fw-medium">ATRACTIVOS</h5>
@@ -182,11 +178,11 @@
         <div class="container ">
             <div class="row text-center">
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">120+</div>
+                    <div class="display-4">+120</div>
                     <p class="mb-0">Atletas Federados</p>
                 </div>
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">5</div>
+                    <div class="display-4">+5</div>
                     <p class="mb-0">Clubes Filiales</p>
                 </div>
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
@@ -194,7 +190,7 @@
                     <p class="mb-0">Seguidores en RRSS</p>
                 </div>
                 <div class="col-lg-3 col-sm-3 col-6 mt-4">
-                    <div class="display-4">10+</div>
+                    <div class="display-4">+10</div>
                     <p class="mb-0">Años de Historia</p>
                 </div>
             </div>
@@ -231,8 +227,8 @@
     <div class="container" style="padding-top: 4rem;">
         <div class="row justify-content-center">
             <div class="col-lg-1 "></div>
-            <div class="col-lg-5 ">
-                <img src="img/calendario.png" style="width: 60%; margin-right: 25%;" alt="">
+            <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                <img src="img/calendario.png" style="width: 60%;" alt="">
             </div>
 
             <div class="col-lg-5  py-2">
@@ -261,9 +257,8 @@
             <div class="col-lg-5  py-2">
                 <h1 class="text-center">ESTADÍSTICAS</h1>
                 <hr class="divider" />
-                <p> Descubre los récords del club realizados en las diferentes pruebas atléticas. Además, visualiza las
-                    mejores marcas personales de nuestros
-                    atletas con licencia. Sumérgete en las estadísticas que reflejan el esfuerzo y el éxito de nuestro
+                <p> Descubre los récords del club realizados en las diferentes pruebas atléticas. Visualiza el atleta que lo realizó además de la marca, lugar y fecha.
+                    Sumérgete en las estadísticas que reflejan el esfuerzo y el éxito de nuestro
                     talentoso equipo:</p>
                 <div class="d-flex justify-content-center align-items-center">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -517,21 +512,21 @@
                 <div class="col-6 col-md-3 mb-3">
                     <h5>Atletismo Santiago</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                        <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-muted">Inicio</a></li>
                         <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Club</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Calendario</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Estadisticas</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Patrocinadores</a></li>
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Contacto</a></li>
+                        <li class="nav-item mb-2"><a href="./calendario.html" class="nav-link p-0 text-muted">Calendario</a></li>
+                        <li class="nav-item mb-2"><a href="./estadisticas_club.html" class="nav-link p-0 text-muted">Estadisticas</a></li>
+                        <li class="nav-item mb-2"><a href="./patrocinadores.html" class="nav-link p-0 text-muted">Patrocinadores</a></li>
+                        <li class="nav-item mb-2"><a href="./contacto.html" class="nav-link p-0 text-muted">Contacto</a></li>
 
                     </ul>
                 </div>
                 <div class="col-6 col-md-3 mb-3">
                     <h5>Club</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Historia</a></li>
+                        <li class="nav-item mb-2"><a href="./historia.html" class="nav-link p-0 text-muted">Historia</a></li>
 
-                        <li class="nav-item mb-2"><a href="" class="nav-link p-0 text-muted">Inscripciones</a></li>
+                        <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia" class="nav-link p-0 text-muted">Inscripciones</a></li>
 
                     </ul>
                 </div>
@@ -560,9 +555,9 @@
 
                 </div>
             </div>
-            <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <div class="d-flex flex-column flex-sm-row justify-content-between border-top">
                 <p>&copy; 2023 Reservados todos los derechos. <a
-                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#516171"
+                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
                         target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-4"><a class="bi bi-twitter link-dark" href="#"></a></li>
